switch to using flashMessages for notification

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/main.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/main.html.twig
@@ -44,9 +44,9 @@
 
 {% block body %}
 
-{% if message|default %}
-    <div class="messages status">{{ message|default }}</div>
-{% endif %}
+{% for flashMessage in app.session.flashbag.get('notice') %}
+    <div class="messages status">{{ flashMessage }}</div>
+{% endfor %}
 
 <script type="text/javascript">var issueTrackingBaseUrl="{{ issueTrackingBaseUrl }}";</script>
 <div style="background: #fff2e8; padding:0px;" id="tabs">
