Report submissionTimeStamp in submit confirmation

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/submit.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/submit.html.twig
@@ -101,7 +101,7 @@ Thank you for your submission. Please email <a href="mailto:griidc@gomri.org?sub
                 <b>Submitted On:</b>
             </td>
             <td>
-                {{ DatasetSubmission.getCreationTimeStamp.format('c') }}
+                {{ DatasetSubmission.getSubmissionTimeStamp.format('c') }}
             </td>
         </tr>
     </table>
