Changed mdapp to use submissionTimeStamp

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/main.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/main.html.twig
@@ -158,7 +158,7 @@
                             <input type="submit" value="->" id="state_sel_sub_{{dta.udi}}">
                             </form>
                             </td>
-                            <td valign="top">{{ dta.datasetSubmission.creationTimeStamp | date("c") }}</td>
+                            <td valign="top">{{ dta.datasetSubmission.submissionTimeStamp | date("c") }}</td>
                             <td valign="top">
                                 <table id="filedisp">
                                     <tr>
