--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/dataset-contact.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/dataset-contact.html.twig
@@ -9,7 +9,9 @@
 					<img class="info" src="{{ asset_url }}">
 					{% endimage %}
 					<div class="tooltiptext">
-						The name of the individual responsible for the creation of the majority of the dataset.
+						Please use the drop down list to select the person who can be contacted with questions
+                        concerning the dataset. If the person is not listed or their contact
+                        information is incorrect, please contact <a href=mailto:griidc@gomri.org>griidc@gomri.org</a>.
 					</div>
 				</span>
                 <label for="datasetcontact">Person</label>
@@ -31,9 +33,7 @@
 					<img class="info" src="{{ asset_url }}">
 					{% endimage %}
 					<div class="tooltiptext">
-						Point of Contact: Party who can be contacted for acquiring knowledge about or acquisition of the resource.<br>
-						Principal Investigator: Key party responsible for gathering information and conducting research.<br>
-						Author: Party who authored the resource.<br>
+                        Please select the person’s relationship to the dataset from the drop down list.
 					</div>
 				</span>
                 {{ form_row(contact.role) }}
@@ -47,7 +47,8 @@
 					<img class="info" src="{{ asset_url }}">
 					{% endimage %}
 					<div class="tooltiptext">
-						The Suggested Author List should contain all participants who collaborated in the creation, processing or analysis of the data you are sending to GRIIDC who should be acknowledged if these data are cited as a published work. Please list suggested authors in the order in which they should be listed in a citation.
+                        Please provide a list of authors who should be acknowledged if these data
+                        are cited in published materials.
 					</div>
 				</span>
                 {{ form_row(form.authors) }}
