--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/distribution-info.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/distribution-info.html.twig
@@ -1,5 +1,7 @@
 <fieldset>
-	This section collects technical details related to the distribution of the dataset. Provides GRIIDC and future researchers the means to evaluate the means needed to download and read the dataset.
+	This section collects technical details related to the distribution of the datase and provides
+    GRIIDC and future researchers the means to evaluate the means needed to download and read the
+    dataset.
 </fieldset>
 <fieldset>
     <legend>Format</legend>
@@ -11,7 +13,8 @@
 					<img class="info" src="{{ asset_url }}">
 					{% endimage %}
 					<div class="tooltiptext">
-						Name of the data transfer format, e.g. CSV, Excel Spreadsheet, ASCII TXT, netCDF, GRIB, HDF5, TIFF, etc
+						A list of all the file types or extensions of all the files included as
+                        part of your dataset. For example: xlsx, csv, tiff, txt, etc.
 					</div>
 				</span>
                 {{ form_row(form.distributionFormatName) }}
@@ -24,7 +27,9 @@
 					<img class="info" src="{{ asset_url }}">
 					{% endimage %}
 					<div class="tooltiptext">
-						Description of recommended processes or algorithms to apply to the compressed resource.
+				        If multiple files were packaged together to create a single dataset file,
+                        please provide the method used to package these files together. Common
+                        examples include zip and tar.
 					</div>
 				</span>
                 {{ form_row(form.fileDecompressionTechnique) }}
