--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/tree.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/tree.html.twig
@@ -101,7 +101,7 @@
                                         d.add(
                                             nodecount,
                                             -1,
-                                            'My Registries',
+                                            'My Submissions',
                                             ''
                                         );
                                         nodecount++;
@@ -111,7 +111,7 @@
                                             mynode,
                                             'Others',
                                             'javascript: d.o('+nodecount+');',
-                                            'Other Registrations',
+                                            'Other Submissions',
                                             '',
                                             '',
                                             '',
