--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Email/user.dataset-processed.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Email/user.dataset-processed.email.twig
@@ -1,9 +1,9 @@
-{% block subject 'GRIIDC Registration Summary' %}
+{% block subject 'GRIIDC Submission Summary' %}
 
 {% block body_html %}
 Dear {{ recipient.getFirstName }} {{ recipient.getLastName }},<br>
 <br>
-Thank you for registering your dataset with the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC).<br>
+Thank you for submitting your dataset to the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC).<br>
 <br>
 <table style='border-collapse: collapse;'>
     <tr>
@@ -32,7 +32,7 @@ The GRIIDC Team<br>
 {% block body_text %}
 Dear {{ recipient.getFirstName }} {{ recipient.getLastName }},
 
-Thank you for registering your dataset with the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC).
+Thank you for submitting your dataset to the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC).
 
 The following {{ type }} file has been processed and can now be viewed:
 
