--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Dataland/index.html.twig
@@ -110,7 +110,7 @@
     {% else %}
         <p>
         <h1>Dataset not found</h1>
-        No dataset has been identified or registered with the UDI: <?php echo "$udi";?><br/>
+        No dataset has been identified or submitted with the UDI: <?php echo "$udi";?><br/>
         If you are experiencing difficulties, please contact <a href="mailto:griidc@gomri.org">GRIIDC</a>.
         </p>
     {% endif %}
