--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/file-submit.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/file-submit.html.twig
@@ -34,7 +34,7 @@
                                 <img class="info" src="{{ asset_url }}">
                                 {% endimage %}
                                 <div class="tooltiptext">
-                                    <p>Please select from your local machine the data file for the dataset you are registering.</p>
+                                    <p>Please select from your local machine the data file for the dataset you are submitting.</p>
                                     <p style="color:red">Do not include copyrighted materials (e.g. published journal articles) in your data package.</p>
                                 </div>
                             </span>
@@ -71,7 +71,7 @@
                                     {% endimage %}
                                     <div class="tooltiptext">
                                         <p><strong>Dataset File Path:</strong></p>
-                                        <p>This is the path on the server to the data file being registered. Click "Browse..." to find and select the data file you uploaded via SFTP/GridFTP.</p>
+                                        <p>This is the path on the server to the data file being submitted. Click "Browse..." to find and select the data file you uploaded via SFTP/GridFTP.</p>
                                         <p style="color:red">Do not include copyrighted materials (e.g. published journal articles) in your data package.</p>
                                     </div>
                                 </span>
@@ -106,7 +106,7 @@
                                     {% endimage %}
                                     <div class="tooltiptext">
                                         <p><strong>Dataset File URL:</strong></p>
-                                        <p>This is the URL that leads to the data being registered. Package the components of the datasets (if applicable) to form a single file (e.g. ZIP, TAR).</p>
+                                        <p>This is the URL that leads to the data being submitted. Package the components of the datasets (if applicable) to form a single file (e.g. ZIP, TAR).</p>
                                         <p style="color:red">Do not include copyrighted materials (e.g. published journal articles) in your data package.</p>
                                     </div>
                                 </span>
