--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/submit.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/submit.html.twig
@@ -7,14 +7,14 @@
 {% block body %}
 <div class="messages status">
 <h2 class="element-invisible">Status message</h2>
-Thank you for your submission. Please email <a href="mailto:griidc@gomri.org?subject=Registration Form">griidc@gomri.org</a> if you have any questions.
+Thank you for your submission. Please email <a href="mailto:griidc@gomri.org?subject=Submission Form">griidc@gomri.org</a> if you have any questions.
 </div>
 
 <fieldset>
     <table border="1" width="100%" style="background-color:white; color:black;" border="0">
         <tr>
             <td width="200px" align="top">
-                <b>Registry Identifier:</b>
+                <b>Submission Identifier:</b>
             </td>
             <td>
                 <h2>
@@ -108,7 +108,7 @@ Thank you for your submission. Please email <a href="mailto:griidc@gomri.org?sub
     <p/>
     <br>
     <button type="button" onclick="window.location.href='{{ path('pelagos_app_ui_datasetsubmission_default') }}';">
-        Fill out another Registration Form
+        Fill out another Submission Form
     </button>
 </fieldset>
 {% endblock %}
