--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Email/data-managers.dataset-submitted.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Email/data-managers.dataset-submitted.email.twig
@@ -1,9 +1,9 @@
-{% block subject 'GRIIDC Dataset Registration Submitted' %}
+{% block subject 'GRIIDC Dataset Submitted' %}
 
 {% block body_html %}
     Dear {{ recipient.getFirstName }} {{ recipient.getLastName }},<br>
     <br>
-    A registration form has been submitted to the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) by {{dataset.getDatasetSubmission.getCreator.getFirstName}} {{dataset.getDatasetSubmission.getCreator.getLastName}} for the dataset {{dataset.getUdi}}. {{dataset.getDatasetSubmission.getCreator.getFirstName}} {{dataset.getDatasetSubmission.getCreator.getLastName}} is a member of {{ dataset.getDatasetSubmission.getCreator.getResearchGroupNames | join(', ') }} and the dataset is associated with {{dataset.getResearchGroup.getName}}.<br>
+    A dataset has been submitted to the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) by {{dataset.getDatasetSubmission.getCreator.getFirstName}} {{dataset.getDatasetSubmission.getCreator.getLastName}} for the dataset {{dataset.getUdi}}. {{dataset.getDatasetSubmission.getCreator.getFirstName}} {{dataset.getDatasetSubmission.getCreator.getLastName}} is a member of {{ dataset.getDatasetSubmission.getCreator.getResearchGroupNames | join(', ') }} and the dataset is associated with {{dataset.getResearchGroup.getName}}.<br>
     <br>
     Thank you,<br>
     <br>
@@ -15,7 +15,7 @@
 {% block body_text %}
 Dear {{ recipient.getFirstName }} {{ recipient.getLastName }},
 
-A registration form has been submitted to the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) by {{dataset.getDatasetSubmission.getCreator.getFirstName}} {{dataset.getDatasetSubmission.getCreator.getLastName}} for the dataset {{dataset.getUdi}}. {{dataset.getDatasetSubmission.getCreator.getFirstName}} {{dataset.getDatasetSubmission.getCreator.getLastName}} is a member of {{ dataset.getDatasetSubmission.getCreator.getResearchGroupNames | join(', ') }} and the dataset is associated with {{dataset.getResearchGroup.getName}}.
+A dataset has been submitted to the Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) by {{dataset.getDatasetSubmission.getCreator.getFirstName}} {{dataset.getDatasetSubmission.getCreator.getLastName}} for the dataset {{dataset.getUdi}}. {{dataset.getDatasetSubmission.getCreator.getFirstName}} {{dataset.getDatasetSubmission.getCreator.getLastName}} is a member of {{ dataset.getDatasetSubmission.getCreator.getResearchGroupNames | join(', ') }} and the dataset is associated with {{dataset.getResearchGroup.getName}}.
 
 Thank you,
 
