--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Email/user.dataset-created.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Email/user.dataset-created.email.twig
@@ -1,11 +1,11 @@
-{% block subject 'GRIIDC Dataset Registration Submitted' %}
+{% block subject 'GRIIDC Dataset Submitted' %}
 
 {% block body_html %}
     Dear {{ recipient.getFirstName }} {{ recipient.getLastName }},<br>
     <br>
-    The Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) has received your dataset registration <a href="{{ url('pelagos_app_ui_datasetsubmission_default') }}?regid={{datasetSubmission.dataset.udi}}">{{datasetSubmission.dataset.udi}}</a>
+    The Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) has received your dataset submission <a href="{{ url('pelagos_app_ui_datasetsubmission_default') }}?regid={{datasetSubmission.dataset.udi}}">{{datasetSubmission.dataset.udi}}</a>
     <br>
-    If you have any questions regarding this dataset registration please email griidc@gomri.org.<br>
+    If you have any questions regarding this dataset submission please email griidc@gomri.org.<br>
     <br>
     Thank you,<br>
     The GRIIDC Team<br>
@@ -14,9 +14,9 @@
 {% block body_text %}
 Dear {{ recipient.getFirstName }} {{ recipient.getLastName }},
 
-The Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) has received your dataset registration {{ url('pelagos_app_ui_datasetsubmission_default') }}?regid={{datasetSubmission.dataset.udi}}
+The Gulf of Mexico Research Initiative Information and Data Cooperative (GRIIDC) has received your dataset submission {{ url('pelagos_app_ui_datasetsubmission_default') }}?regid={{datasetSubmission.dataset.udi}}
 
-If you have any questions regarding this dataset registration please email griidc@gomri.org.<br>
+If you have any questions regarding this dataset submission please email griidc@gomri.org.<br>
 
 Thank you,
 The GRIIDC Team
