typo fixup, s/datase /dataset/

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/distribution-info.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/distribution-info.html.twig
@@ -1,5 +1,5 @@
 <fieldset>
-	This section collects technical details related to the distribution of the datase and provides
+	This section collects technical details related to the distribution of the dataset and provides
     GRIIDC and future researchers the means to evaluate the means needed to download and read the
     dataset.
 </fieldset>
