changed content back to contents

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/extent.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/extent.html.twig
@@ -2,7 +2,7 @@
     <legend>Data Extent</legend>
     <fieldset>
         This section collects information describing the spatial and temporal extent of
-        the dataset content. This provides GRIIDC and future researchers the means to search
+        the dataset contents. This provides GRIIDC and future researchers the means to search
         for datasets by location or time. Some datasets may not have a relevant
         location or time (ex. lab simulations), so a short explanation is requested for
         these cases.
