Changed heading 'Registered' to 'Submitted'

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/projects.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/projects.html.twig
@@ -44,7 +44,7 @@
                                 </span>
                                 <span id="r">
                                 {% image '@PelagosAppBundle/Resources/public/images/yellow-circle.png' %}
-                                    <img src="{{asset_url}}"> Registered:
+                                    <img src="{{asset_url}}"> Submitted:
                                 {% endimage %}
                                 </span>
                                 <span id="i">
