updated verbage per PO instructions

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/dataset-contact.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/dataset-contact.html.twig
@@ -9,9 +9,9 @@
 					<img class="info" src="{{ asset_url }}">
 					{% endimage %}
 					<div class="tooltiptext">
-						Please use the drop down list to select the person who can be contacted with questions
-                        concerning the dataset. If the person is not listed or their contact
-                        information is incorrect, please contact <a href=mailto:griidc@gomri.org>griidc@gomri.org</a>.
+                        Please use the drop down list to select the person who can be contacted
+                        about the dataset. If the person is not listed or their contact information
+                        is incorrect, please contact griidc@gomri.org.
 					</div>
 				</span>
                 <label for="datasetcontact">Person</label>
@@ -33,7 +33,8 @@
 					<img class="info" src="{{ asset_url }}">
 					{% endimage %}
 					<div class="tooltiptext">
-                        Please select the person’s relationship to the dataset from the drop down list.
+                        Please select the person’s relationship to the dataset from the drop down
+                        list.
 					</div>
 				</span>
                 {{ form_row(contact.role) }}
