--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/keywords.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/keywords.html.twig
@@ -1,10 +1,3 @@
-
-<fieldset>
-    This section collects keywords/key phrases describing the theme and location of the dataset
-    and provides GRIIDC and future researchers with short descriptions to aid search. Some datasets
-    may not have relevant place keywords (ex. lab simulations).
-</fieldset>
-
 <fieldset>
     <legend>Theme Keywords</legend>
     <table class="tab-table">
@@ -15,9 +8,10 @@
 					<img class="info" src="{{ asset_url }}">
 					{% endimage %}
 					<div class="tooltiptext">
-						Commonly used words or short phrases that describe themes or subjects related to the dataset.
-                        These may be keywords used to describe the publication associated with the dataset. Do not
-                        include keywords that describe the location or geography of the data.
+                        Commonly used words or short phrases that describe themes or subjects
+                        related to the dataset. These may be keywords used to describe the
+                        publication associated with the dataset. Do not include keywords that
+                        describe the location or geography of the data.
 					</div>
 				</span>
                 <table width="80%">
@@ -59,8 +53,9 @@
 						<img class="info" src="{{ asset_url }}">
 						{% endimage %}
 						<div class="tooltiptext">
-                            Commonly used words or short phrases that describe the geographic areas, locations,
-                            or places associated with the data, if applicable.
+                            Commonly used words or short phrases that describe the geographic areas,
+                            locations, or places associated with the data, if applicable. Leave blank
+                            if the dataset does not have a relevant place keyword (e.g. lab mesocoms).
 						</div>
 					</span>
                     <table width="80%">
@@ -103,8 +98,9 @@
 					<img class="info" src="{{ asset_url }}">
 					{% endimage %}
 					<div class="tooltiptext">
-                        These keywords are pre-defined by the ISO 1115-2 metadata standard used by GRIIDC.
-                        Hover over the keyword to see a definition.
+                        Broad theme keywords pre-defined by the ISO 1115-2 metadata standard
+                        used by GRIIDC, select those most applicable to the data. Hover over
+                        the keyword to see a definition.
 					</div>
 				</span>
                 <table width="80%">
