--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/metadata-contact.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/metadata-contact.html.twig
@@ -9,10 +9,10 @@
 					<img class="info" src="{{ asset_url }}">
 					{% endimage %}
 					<div class="tooltiptext">
-						Please use the drop down list to select the person who can be contacted
-                        concerning questions about the dataset. If the person is not in
-                        the list or their contact information is incorrect, please contact
-                        <a href=mailto:griidc@gomri.org>griidc@gomri.org</a>.
+                        Please use the drop down list to select the person who can be contacted
+                        about the dataset’s descriptive information. If the person is not in the
+                        list or their contact information is incorrect, please contact
+                        griidc@gomri.org.
 					</div>
 				</span>
                 <label for="metadatacontact">Person</label>
@@ -34,8 +34,8 @@
 					<img class="info" src="{{ asset_url }}">
 					{% endimage %}
 					<div class="tooltiptext">
-                        Please select the person’s relationship to the dataset description from
-                        the drop down list.
+                        Please select the person’s relationship to the dataset’s descriptive
+                        information from the drop down list.
 					</div>
 				</span>
                 {{ form_row(contact.role) }}
