--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/dataset-information.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/dataset-information.html.twig
@@ -8,9 +8,9 @@
 					<img class="info" src="{{ asset_url }}">
 					{% endimage %}
 					<div class="tooltiptext">
-                        The dataset title should be unique and describe what data are
-                        in the dataset and, if applicable, the relevant date, date
-                        range, and geographical area.
+                        The dataset title should be unique and describe what data are in the
+                        dataset and, if applicable, the relevant date, date range, and geographical
+                        area. Ex. Fish Fertility Potential Assays, DeSoto Canyon, August 15-29, 2013
 					</div>
 				</span>
                 {{ form_row(form.title) }}
@@ -23,7 +23,7 @@
 					<img class="info" src="{{ asset_url }}">
 					{% endimage %}
 					<div class="tooltiptext">
-                        A short name or alternative title for the dataset.
+						A short name or alternative title for the dataset.
 					</div>
 				</span>
                 {{ form_row(form.shortTitle) }}
@@ -36,9 +36,8 @@
 					<img class="info" src="{{ asset_url }}">
 					{% endimage %}
 					<div class="tooltiptext">
-                        The date that will be used to reference the dataset. This
-                        date can represent the date the dataset was created,
-                        published, or revised.
+                        The date that will be used to reference the dataset. This date can represent the
+                        date the dataset was created, published, or revised.
 					</div>
 				</span>
                 {{ form_row(form.referenceDate) }}
@@ -51,8 +50,8 @@
 					<img class="info" src="{{ asset_url }}">
 					{% endimage %}
 					<div class="tooltiptext">
-                        A description of the date provided above if the date refers
-                        to the date the dataset was created, published, or revised.
+                        A description of the date provided above if the date refers to the date the dataset
+                        was created, published, or revised.
 					</div>
 				</span>
                 {{ form_row(form.referenceDateType) }}
@@ -65,11 +64,9 @@
 					<img class="info" src="{{ asset_url }}">
 					{% endimage %}
 					<div class="tooltiptext">
-						A brief description of the contents of the dataset including
-                        what data are included in the dataset, how these data were
-                        acquired, and if applicable, where and when these data were
-                        acquired. This should not be the same as the publication
-                        abstract.
+						A brief description of the contents of the dataset including what data are included
+                        in the dataset, how these data were acquired, and if applicable, where and when these
+                        data were acquired. This should not be the same as the publication abstract.
 					</div>
 				</span>
                 {{ form_row(form.abstract) }}
@@ -82,8 +79,7 @@
 					<img class="info" src="{{ asset_url }}">
 					{% endimage %}
 					<div class="tooltiptext">
-						A summary of the reason why the data were collected,
-                        generated, or otherwise acquired.
+						A summary of the reason why the data were collected, generated, or otherwise acquired.
 					</div>
 				</span>
                 {{ form_row(form.purpose) }}
@@ -96,9 +92,8 @@
 					<img class="info" src="{{ asset_url }}">
 					{% endimage %}
 					<div class="tooltiptext">
-                        The DOI assigned to the DATASET. If your dataset has been
-                        issued a DOI by GRIIDC or another repository or archive
-                        please provide it here. Please <strong>do not</strong>
+                        The DOI assigned to the DATASET. If your dataset has been issued a DOI by GRIIDC or
+                        another repository or archive please provide it here. Please <strong>do not</strong>
                         provide DOIs assigned to publications.
 					</div>
 				</span>
@@ -112,8 +107,7 @@
 					<img class="info" src="{{ asset_url }}">
 					{% endimage %}
 					<div class="tooltiptext">
-						A list of the parameters/variables and units included
-                        in the dataset.
+						A list of the parameters/variables and units included in the dataset.
 					</div>
 				</span>
                 {{ form_row(form.suppParams) }}
@@ -126,8 +120,8 @@
 					<img class="info" src="{{ asset_url }}">
 					{% endimage %}
 					<div class="tooltiptext">
-						A brief description of methods used to acquire the data
-                        included in the dataset.
+						A brief description of methods used to acquire the data included in the
+                        dataset.
 					</div>
 				</span>
                 {{ form_row(form.suppMethods) }}
@@ -140,8 +134,7 @@
 					<img class="info" src="{{ asset_url }}">
 					{% endimage %}
 					<div class="tooltiptext">
-						A list of instruments used to acquire the data included
-                        in the dataset.
+						A list of instruments used to acquire the data included in the dataset.
 					</div>
 				</span>
                 {{ form_row(form.suppInstruments) }}
@@ -154,9 +147,8 @@
 					<img class="info" src="{{ asset_url }}">
 					{% endimage %}
 					<div class="tooltiptext">
-						A description of spatial and temporal scales and rates
-                        that were used to collect and/or generate the data, if
-                        applicable.
+                        A description of spatial and temporal scales and rates that were used to
+                        collect and/or generate the data, if applicable.
 					</div>
 				</span>
                 {{ form_row(form.suppSampScalesRates) }}
@@ -169,9 +161,8 @@
 					<img class="info" src="{{ asset_url }}">
 					{% endimage %}
 					<div class="tooltiptext">
-					    A description of any error or uncertainty analysis
-                        completed on the final data and the results of the
-                        analysis.
+						A description of any error or uncertainty analysis completed on the final
+                        data and the results of the analysis.
 					</div>
 				</span>
                 {{ form_row(form.suppErrorAnalysis) }}
@@ -184,11 +175,9 @@
 					<img class="info" src="{{ asset_url }}">
 					{% endimage %}
 					<div class="tooltiptext">
-                        If existing historical data were used as part of
-                        the dataset, please provide a description of this
-                        data, including who created the original dataset
-                        (person and/or organization) and where the historical
-                        data can be obtained.
+						If existing historical data were used as part of the dataset, please provide
+                        a description of these data, including who created the original dataset (person
+                        and/or organization) and where the historical data can be obtained.
 					</div>
 				</span>
                 {{ form_row(form.suppProvenance) }}
