--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/extent.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/extent.html.twig
@@ -1,11 +1,9 @@
 <fieldset>
     <legend>Data Extent</legend>
     <fieldset>
-        This section collects information describing the spatial and temporal extent of
-        the dataset contents. This provides GRIIDC and future researchers the means to search
-        for datasets by location or time. Some datasets may not have a relevant
-        location or time (ex. lab simulations), so a short explanation is requested for
-        these cases.
+        This section collects information describing the spatial and temporal extent
+        of the dataset contents. If a dataset does not have a relevant location or
+        time (ex. lab simulations), a short explanation is requested.
     </fieldset>
     <div id="geoWizard" style="width:100%;height:100%;"/>
         <table class="tab-table">
@@ -38,15 +36,13 @@
 						<img class="info" src="{{ asset_url }}">
 						{% endimage %}
 						<div class="tooltiptext">
-                            This is a description of what the date below represents. If
-                            the data represents real world conditions during the time
-                            period, select “ground condition”. If the data represents a
-                            simulation during a specific time period, select “modeled
-                            period”.  If the data represents both real world
-                            conditions and model simulations, select “ground
-                            condition and modeled period”. If the data does not have
-                            a relevant time period, including mesocosm data, please use
-                            the spatial wizard above to describe it.
+                            A description of what the time period represents. If the data represent
+                            real world conditions during the time period, select “ground condition”.
+                            If the data represent a simulation during a specific time period, select
+                            “modeled period”.  If the data represent both real world conditions and
+                            model simulations, select “ground condition and modeled period”.  If the
+                            data do not have a relevant time period, including mesocosm data, use the
+                            spatial wizard above and select “Non-Spatial”.
 						</div>
 					</span>
                     {{ form_row(form.temporalExtentDesc) }}
@@ -59,8 +55,8 @@
 						<img class="info" src="{{ asset_url }}">
 						{% endimage %}
 						<div class="tooltiptext">
-                            The beginning date when the data was collected. Alternatively,
-                            for a model, the earliest date for which the data was generated.
+							The beginning date when the data were collected. Alternatively, for a model,
+                            the earliest date for which the data were generated.
 						</div>
 					</span>
                     {{ form_row(form.temporalExtentBeginPosition) }}
@@ -73,8 +69,8 @@
 						<img class="info" src="{{ asset_url }}">
 						{% endimage %}
 						<div class="tooltiptext">
-                            The end date when the data was collected. Alternatively,
-                            for a model, the end date for which the data was generated.
+                            The end date when the data were collected. Alternatively, for a model, the
+                            end date for which the data were generated.
 						</div>
 					</span>
                     {{ form_row(form.temporalExtentEndPosition) }}
