--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/datasets.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetMonitoring/datasets.html.twig
@@ -89,7 +89,7 @@
                 {% set registered_icon = red_icon %}
             {% endif %}
 
-            {% if dataset.datasetSubmissionStatus == constant('Pelagos\\Entity\\DatasetSubmission::STATUS_UNSUBMITTED') %}
+            {% if dataset.datasetSubmissionStatus != constant('Pelagos\\Entity\\DatasetSubmission::STATUS_COMPLETE') %}
                 {% set metadata_na = metadata_na + 1 %}
                 {% set metadata_title = "This dataset has not yet been submitted, therefore no metadata is available." %}
                 {% set metadata_icon = na_icon %}
@@ -111,7 +111,7 @@
                 {% set metadata_icon = yellow_icon %}
             {% endif %}
 
-            {% if dataset.datasetSubmissionStatus == constant('Pelagos\\Entity\\DatasetSubmission::STATUS_UNSUBMITTED') %}
+            {% if dataset.datasetSubmissionStatus != constant('Pelagos\\Entity\\DatasetSubmission::STATUS_COMPLETE') %}
                 {% set available_na = available_na + 1 %}
                 {% set available_title = "This dataset has not yet been submitted, therefore it is not yet available." %}
                 {% set available_icon = na_icon %}
