--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Default/index.html.twig
@@ -10,7 +10,7 @@
         <li><a href="{{ path("pelagos_app_ui_dif_default") }}">DIF</a></li>
         <li><a href="{{ path("pelagos_app_ui_datasetsubmission_default") }}">Dataset Submission</a></li>
         <li><a href="{{ path("pelagos_app_ui_datasetmonitoring_default") }}">Dataset Monitoring</a></li>
-        <li><a href="{{ path("pelagos_app_ui_datadiscovery_default") }}">Dataset Discovery</a></li>
+        <li><a href="{{ path("pelagos_app_ui_datadiscovery_default") }}">Data Discovery</a></li>
         <li><a href="{{ path("pelagos_app_ui_doirequest_default") }}">DOI Request</a></li>
         <li><a href="{{ path("pelagos_app_ui_stats_default") }}">Stats</a></li>
     </ul>
